# sawatreekap

./: .gitignore  NFTree.sol  README.md  plantTree.sol  token.sol  treeToken.sol
backend/: Dockerfile  pyproject.toml
backend/py_app_service/: app.py
backend/py_app_service/controllers/: __init__.py  auth.py  image_storage.py  my_tree.py  payment.py  quests.py
backend/py_app_service/models/: __init__.py
backend/py_app_service/seeders/: quest_seeder.py
backend/py_app_service/utils/: __init__.py  gpt_util.py  middleware.py
backend/py_app_service/workers/: reward_nft.py  tree_nft.py
frontend/: .env.example  .gitignore  Dockerfile  bun.lockb  deploy.sh  docker-compose.yml  next.config.mjs  package.json  tailwind.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/cdp/: getchain.ts  wagmi.ts
frontend/src/components/: AboutSection.tsx  Header.tsx  HeroSection.tsx  LeaderboardItem.tsx  LeaderboardSection.tsx  ProjectImpact.tsx  TreeIllustration.tsx
frontend/src/components/dashboard/: AchievementTab.tsx  ActivityItem.tsx  ActivityTimeline.tsx  ChartCard.tsx  DashboardCard.tsx  DashboardGrid.tsx  Header.tsx  Layout.tsx  Leaderboard.tsx  LeaderboardItem.tsx  LeaderboardTab.tsx  MarketplaceTab.tsx  MerchendiseCard.tsx  NFTCard.tsx  NFTMedia.tsx  QuestItem.tsx  QuestTab.tsx  SellTokenSection.tsx  Sidebar.tsx  SidebarItem.tsx
frontend/src/components/homepage/: AboutSection.tsx  Footer.tsx  Header.tsx  HeroSection.tsx  ProjectCard.tsx  (+1 more)
frontend/src/providers/: authProvider.tsx  coinbaseDevProvider.tsx
frontend/src/styles/: global.css
(+9 files in other folders)
